# corn-test

./: .gitignore  README.md  pom.xml
.github/: dependabot.yml
.github/agents/: dependency-reviewer.agent.md  setup-agentic-workflows.agent.md
.github/aw/: actions-lock.json
.github/workflows/: agentics-maintenance.yml  azure-infra-troubleshooting.lock.yml  azure-infra-troubleshooting.md  codeql.yml  copilot-setup-steps.yml  corn-flakes-detection.lock.yml  corn-flakes-detection.md  daily-repo-status.lock.yml  dependabot-pr-review.lock.yml  dependabot-pr-review.md  nuget-dependency-submission.yml  race-condition-detection.lock.yml  race-condition-detection.md  reopened-issue-handler.lock.yml  reopened-issue-handler.md  test.yml
agents/: debug-agentic-workflow.agent.md
c/: CMakeLists.txt
c/src/: math_operations.c  math_operations.h  random_math_operations.c  random_math_operations.h
c/tests/: test_math_operations.c  test_random_math_operations.c
cpp/: CMakeLists.txt
cpp/src/: math_operations.cpp  math_operations.h  random_math_operations.cpp  random_math_operations.h
cpp/tests/: math_operations_test.cpp  random_math_operations_test.cpp
csharp/: CornTest.sln
csharp/CornTest/: MathOperations.cs  RandomMathOperations.cs
csharp/CornTest.Tests/: CornTest.Tests.csproj  MathOperationsTest.cs  RandomMathOperationsTest.cs
dart/: pubspec.yaml
dart/lib/: math_operations.dart  (+1 more)
docs/: ADOPTION_GUIDE.md
elixir/: mix.exs
golang/: go.mod
java/: pom.xml
kotlin/: build.gradle.kts  settings.gradle.kts
php/: composer.json  phpunit.xml
python/: .gitignore  math_operations.py  pytest.ini  random_math_operations.py  requirements.txt
ruby/: Gemfile
rust/: Cargo.toml
rust/src/: lib.rs  (+2 more)
swift/: Package.swift
typescript/: jest.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
(+95 files in other folders)
